# GoLite

./: CST8152_Compilers_F23-A11_AnswerTemplate.docx  README.md  README.txt
A12/A12_Kotadiya018_Bajaj058/a12CMPFile/a1files/code/: CMakeLists.txt  Compilers.c  Reader.c  Reader.h
A12/A12_Kotadiya018_Bajaj058/a12CMPFile/a1files/input/: INPUT2_Volume.gl  INPUT5_General.gl  INPUT6_Big.gl
A12_Kotadiya018_Bajaj058/a12CMPFile/a1files/code/: launch.vs.json
A12_Kotadiya018_Bajaj058/a12CMPFile/a1files/input/: INPUT4_Datatypes.gl  README.txt
A21/: CST8152_Compilers_F23-A21-YOURLANGUAGE_Model.doc
A22/a22CMPFile/a12CMPFile/a1files/code/: CMakeLists.txt  Compilers.h  MainReader.c  MainScanner.c  Reader.c  Scanner.c  Scanner.h
A31/: A31_Kotadiya018_Bajaj058.docx.doc
A32/a32CMPFile/a12CMPFile/a1files/code/: CMakeLists.txt  Compilers.c  Compilers.h  MainParser.c  MainReader.c  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h  launch.vs.json
A32/a32CMPFile/a12CMPFile/a1files/input/: A12.bat  INPUT1_Hello.gl  INPUT3_Factorial-A12.err  INPUT3_Factorial.gl  INPUT4_Datatypes.gl
lecture note/: quiz answsers.docx
lecture note/CompilersSamples/CompilersSamples/: main.c  main.h  main_AscTable.c  main_BasicFunctionPointers.c  main_Bitmask.c  main_BooleanFunctions.c  main_Cdatatypes.c  main_Enumerations.c  main_FunctionPointers.c  main_PointerDatatypes.c  main_TuringMachine.c
lecture note/go-samples/: bool.go  boolfunc.go  datatypes.go  general.go  hello.go  matfunc.go  volumesphere.go
